test/fixtures/fixtures/type-error/bad-assignment.lys.ast.desugar
|-Document(0,60)
  |-FunctionDirective(0,59)
    |-Decorators(0,0)
      <Rule0>
    |-FunDeclaration(0,59)
      |-NameIdentifier(4,8)
        |-Identifier=test
      |-TypeParameters(8,8)
        <Rule0>
      |-FunctionParamsList(8,10)
        |-(List)(9,9)
          <Rule0>
      |-ReturnType(10,16)
        |-Reference(12,15)
          |-QName(12,15)
            |-NameIdentifier(12,15)
              |-Identifier=f32
      |-FunctionBody(16,59)
        |-CodeBlock(18,59)
          |-VarDeclaration(22,38)
            |-NameIdentifier(26,30)
              |-Identifier=test
            |-BooleanLiteral(33,38)
              <Rule0>
          |-BinaryOpExpression(41,50)
            |-Reference(41,45)
              |-QName(41,45)
                |-NameIdentifier(41,45)
                  |-Identifier=test
            |-Operator==
            |-NumberLiteral=12
          |-Reference(53,57)
            |-QName(53,57)
              |-NameIdentifier(53,57)
                |-Identifier=test
  |-EndOfFile=